Fixed `spacing` and `bg gradient`

--- a/output.css
+++ b/output.css
@@ -1777,6 +1777,10 @@ video {
           box-decoration-break: clone;
 }
 
+.bg-cover {
+  background-size: cover;
+}
+
 .bg-fixed {
   background-attachment: fixed;
 }
